[gd_scene load_steps=10 format=3 uid="uid://dt0x3vtwyabsa"]

[ext_resource type="PackedScene" uid="uid://bp2lv8kmupisq" path="res://world/ui.tscn" id="1_i3n5n"]
[ext_resource type="Script" uid="uid://cj3o4vswsgmu2" path="res://worldgen/NavigationMesher.cs" id="2_ft6w7"]
[ext_resource type="PackedScene" uid="uid://0ypfn26rapdv" path="res://prefabs/player/player.tscn" id="3_4byxv"]
[ext_resource type="PackedScene" uid="uid://je1pgwfoft3o" path="res://prefabs/player/agent.tscn" id="4_6jtc5"]
[ext_resource type="Script" uid="uid://rf0rsovrg83d" path="res://scenarios/scenario_moveto_visual.gd" id="5_i3n5n"]

[sub_resource type="NavigationMesh" id="NavigationMesh_u0vnw"]
geometry_parsed_geometry_type = 1
cell_size = 0.16
cell_height = 0.5
agent_radius = 0.32
agent_max_climb = 1.0
agent_max_slope = 90.0
edge_max_length = 10.0
edge_max_error = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t5wr3"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_i3n5n"]
height = 1.0
radius = 7.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r23cj"]
albedo_color = Color(0, 0, 1, 1)

[node name="World" type="Node3D"]

[node name="UI" parent="." instance=ExtResource("1_i3n5n")]

[node name="NavigationMesher" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_u0vnw")
script = ExtResource("2_ft6w7")

[node name="Baseplate" type="CSGBox3D" parent="NavigationMesher"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0105543, 0.0198784, -0.00255489)
use_collision = true
size = Vector3(100, 1, 100)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.998798, 5.58122e-08, -0.049024, 0.0243124, 0.868363, 0.495333, 0.0425707, -0.495929, 0.867319, 0, 40.0129, 0)

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.239523, 23.8613, -1.56535)

[node name="Player" parent="." instance=ExtResource("3_4byxv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 23.1578, 3.54849)

[node name="Agent" parent="." instance=ExtResource("4_6jtc5")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.2875, 1, 0)
goal = "Walk to the blue platform."
scenario_goal = ""
visual_mode = true

[node name="RedPlatform" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0.25, 15)
radius = 7.0
height = 1.0
sides = 32
material = SubResource("StandardMaterial3D_t5wr3")

[node name="Label3D" type="Label3D" parent="RedPlatform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
billboard = 1
text = "Coordinates are (-30, 15)"
font_size = 320
outline_size = 127

[node name="Area3D" type="Area3D" parent="RedPlatform"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RedPlatform/Area3D"]
shape = SubResource("CylinderShape3D_i3n5n")
debug_color = Color(1, 1, 1, 0.42)

[node name="BluePlatform" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0.25, -15)
radius = 7.0
height = 1.0
sides = 32
material = SubResource("StandardMaterial3D_r23cj")

[node name="Label3D" type="Label3D" parent="BluePlatform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
billboard = 1
text = "Coordinates are (-30, -15)"
font_size = 320
outline_size = 127

[node name="Area3D" type="Area3D" parent="BluePlatform"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BluePlatform/Area3D"]
shape = SubResource("CylinderShape3D_i3n5n")
debug_color = Color(1, 1, 1, 0.42)

[node name="ScenarioManager" type="Node" parent="."]
script = ExtResource("5_i3n5n")

[connection signal="bake_finished" from="NavigationMesher" to="NavigationMesher" method="OnBakeFinished"]
